[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/ui/main_gui.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ui/event_log.gd" id="2"]
[ext_resource type="Script" path="res://scripts/ui/message_feed.gd" id="3"]
[ext_resource type="Script" path="res://scripts/ui/text_input_cursor.gd" id="4"]
[ext_resource type="Theme" path="res://themes/main_gui_theme.tres" id="5"]
[ext_resource type="Script" path="res://scripts/ui/minimap_util.gd" id="7"]
; ext_resource id=6 removed (Event Viewer disabled)

[sub_resource type="SystemFont" id="99"]
font_names = ["Times New Roman"]

[sub_resource type="StyleBoxFlat" id="201"]
bg_color = Color(0, 0, 0, 0.08)
border_color = Color(1, 1, 1, 0.12)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 10
shadow_color = Color(0.3, 0.3, 0.3, 0.2)

[sub_resource type="StyleBoxFlat" id="202"]
bg_color = Color(0, 0, 0, 0.06)
border_color = Color(1, 1, 1, 0.16)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 6
shadow_color = Color(0.3, 0.3, 0.3, 0.15)

[node name="MainGUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="Root" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("5")

[node name="LeftPane" type="VBoxContainer" parent="Root"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WorldOverlay" type="Control" parent="Root/LeftPane"]
custom_minimum_size = Vector2(600, 360)
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="Root/LeftPane/WorldOverlay"]
anchors_preset = 1
offset_left = 8.0
offset_top = 8.0

[node name="Attack" type="Button" parent="Root/LeftPane/WorldOverlay/Buttons"]
visible = false
text = "Attack (moved to Actions tab)"

[node name="Overwatch" type="Button" parent="Root/LeftPane/WorldOverlay/Buttons"]
visible = false
text = "Overwatch (moved)"

[node name="EndTurn" type="Button" parent="Root/LeftPane/WorldOverlay/Buttons"]
visible = false
text = "End Turn (moved)"

[node name="ToggleCamera" type="Button" parent="Root/LeftPane/WorldOverlay/Buttons"]
text = "Camera: On"

[node name="EventLog" type="Panel" parent="Root/LeftPane"]
custom_minimum_size = Vector2(600, 280)

[node name="Label" type="Label" parent="Root/LeftPane/EventLog"]
anchors_preset = 1
offset_left = 8.0
offset_top = 8.0
text = "Main Event Log"
theme_override_fonts/font = SubResource(99)

[node name="Body" type="HBoxContainer" parent="Root/LeftPane/EventLog/Body"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 32.0
offset_right = -8.0
offset_bottom = -20.0

[node name="MsgPane" type="Panel" parent="Root/LeftPane/EventLog/Body"]
layout_mode = 2
custom_minimum_size = Vector2(220, 0)
size_flags_horizontal = 1
size_flags_vertical = 3

[node name="MsgVBox" type="VBoxContainer" parent="Root/LeftPane/EventLog/Body/MsgPane"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" type="RichTextLabel" parent="Root/LeftPane/EventLog/Body/MsgPane/MsgVBox"]
layout_mode = 2
bbcode_enabled = true
text = "[url=search][color=#ffbf00][b]SEARCH[/b][/color][/url]"

[node name="Msg" type="RichTextLabel" parent="Root/LeftPane/EventLog/Body/MsgPane/MsgVBox"]
layout_mode = 2
script = ExtResource("3")
visible_lines = 8

[node name="Input" type="LineEdit" parent="Root/LeftPane/EventLog/Body/MsgPane/MsgVBox"]
layout_mode = 2
script = ExtResource("4")

[node name="Scroll" type="ScrollContainer" parent="Root/LeftPane/EventLog/Body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Log" type="RichTextLabel" parent="Root/LeftPane/EventLog/Body/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2")
bbcode_enabled = true
scroll_active = true
autowrap_mode = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)

[node name="RightPane" type="VBoxContainer" parent="Root"]
custom_minimum_size = Vector2(320, 0)
size_flags_horizontal = 1
size_flags_vertical = 3

[node name="TopTabs" type="TabContainer" parent="Root/RightPane"]
custom_minimum_size = Vector2(320, 240)

[node name="Characters" type="Control" parent="Root/RightPane/TopTabs"]

[node name="Inventory" type="Control" parent="Root/RightPane/TopTabs"]

[node name="Powers" type="Control" parent="Root/RightPane/TopTabs"]

[node name="Actions" type="Control" parent="Root/RightPane/TopTabs"]

[node name="Buttons" type="VBoxContainer" parent="Root/RightPane/TopTabs/Actions"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="Attack" type="Button" parent="Root/RightPane/TopTabs/Actions/Buttons"]
text = "Attack"

[node name="Overwatch" type="Button" parent="Root/RightPane/TopTabs/Actions/Buttons"]
text = "Overwatch"

[node name="EndTurn" type="Button" parent="Root/RightPane/TopTabs/Actions/Buttons"]
text = "End Turn"
[node name="TextIO" type="Panel" parent="Root/RightPane"]
visible = false

[node name="Utility" type="Panel" parent="Root/RightPane"]
visible = false

; Event Viewer removed (placeholder not needed yet)

[node name="UtilityVBox" type="VBoxContainer" parent="Root/RightPane/Utility"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="MinimapLabel" type="Label" parent="Root/RightPane/Utility/UtilityVBox"]
visible = false

[node name="Buttons" type="HBoxContainer" parent="Root/RightPane/Utility/UtilityVBox"]

[node name="ToggleDebug" type="Button" parent="Root/RightPane/Utility/UtilityVBox/Buttons"]
text = "Toggle SliceDebug"
; Right-side camera toggle removed to avoid duplication; use top-left button

[node name="Inspector" type="Panel" parent="Root/RightPane"]
custom_minimum_size = Vector2(320, 180)
visible = false

; New minimapUtil placeholder in prior minimap area
[node name="MinimapUtil" type="Panel" parent="Root/RightPane"]
anchors_preset = 10
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -260.0
offset_bottom = -8.0
theme_override_styles/panel = SubResource(201)
script = ExtResource("7")

[node name="MiniVBox" type="VBoxContainer" parent="Root/RightPane/MinimapUtil"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
alignment = 2

[node name="MiniTitle" type="Label" parent="Root/RightPane/MinimapUtil/MiniVBox"]
text = "minimapUtil (placeholder)"

[node="MiniFrame" type="Panel" parent="Root/RightPane/MinimapUtil/MiniVBox"]
custom_minimum_size = Vector2(0, 120)
theme_override_styles/panel = SubResource(202)
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBox" type="VBoxContainer" parent="Root/RightPane/Inspector"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="Title" type="Label" parent="Root/RightPane/Inspector/VBox"]
text = "Inspector"

[node name="Body" type="RichTextLabel" parent="Root/RightPane/Inspector/VBox"]
bbcode_enabled = true
autowrap_mode = 2

[node name="Close" type="Button" parent="Root/RightPane/Inspector/VBox"]
text = "Close"